--- a/src/DartsScoreboardGames/DartsScoreboardGames.csproj
+++ b/src/DartsScoreboardGames/DartsScoreboardGames.csproj
@@ -8,11 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="MudBlazor" Version="8.12.0" />
     <PackageReference Include="PinguApps.Blazor.QRCode" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="wwwroot\assets\dartboard.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="wwwroot\avatars\1.jpeg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -22,6 +27,10 @@
     <Content Update="wwwroot\favicon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\avatars\" />
   </ItemGroup>
 
 </Project>
