--- a/src/pyserver/dartboard_settings.json
+++ b/src/pyserver/dartboard_settings.json
@@ -1,5 +1,7 @@
 {
-  "dark_threshold": 65,
-  "brightness_adjust": 15,
-  "contrast_adjust": 1.0
+  "dark_threshold": 130,
+  "brightness_adjust": 10,
+  "contrast_adjust": 1.0,
+  "center_offset_x": -6,
+  "center_offset_y": 0
 }
